homepage - text overlapping navigation fix

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -2457,6 +2457,14 @@ MEDIA QUERIES
       height: 300px;
     }
   }
+  .cd-section .col-sm-6 {
+    &.frontpage-text {
+      h2,
+      h3 {
+        max-width: 85%;
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 767px) {
